--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.36"
 python-dateutil = "^2.9.0.post0"
 requests = "^2.32.3"
 psycopg2 = "^2.9.10"
+discord = "^2.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
