--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dateutil = "^2.9.0.post0"
 requests = "^2.32.3"
 psycopg2 = "^2.9.10"
 discord = "^2.3.2"
+isodate = "^0.7.2"
 flask = "^3.1.0"
 
 
